--- a/sucesso.html
+++ b/sucesso.html
@@ -4,14 +4,15 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<title>Fomulário de envio - Ednaldo Teles</title>
+<title>Fomulário de envio - EdSec</title>
 
-<meta name="author" content="Ednaldo Teles - https://github.com/EdnaldoTeles" />
+<meta name="author" content="Ednaldo Teles - https://github.com/EdSec" />
 
 </head>
 <body>
 
 <h3>Sua mensagem foi enviada com sucesso!</h3>
+<h5> Att: EdSec ( https://github.com/EdSec ) </h5>
 
 </body>
 </html>
