--- a/sucesso.html
+++ b/sucesso.html
@@ -6,7 +6,7 @@
 
 <title>Fomulário de envio - EdSec</title>
 
-<meta name="author" content="Ednaldo Teles - https://github.com/EdSec" />
+<meta name="author" content="EdSec - https://github.com/EdSec" />
 
 </head>
 <body>
